fixed cut off mobile share area

--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -209,7 +209,7 @@ ul.share-buttons li{
 		text-align:center;
 		position: relative;
 		width: 100%;
-		height: 30px;
+		height: 25px;
 		background: white;
 		top: -5px;
 		left: 0;
@@ -219,9 +219,9 @@ ul.share-buttons li{
 		position: fixed;
 		right: 5px;
 		border: 0;
-		padding: 5px;
-		height: 10px;
-		top: 30px;
+		padding: 0px;
+		height: 5px;
+		top: 33px;
 		background-color: white;
 		z-index: 50;
 	}
